# caldera-sandbox

./: .gitignore  01_Architectural_Overview.md  02_Design_Decisions.md  README.md  build_asan_log.txt
backend/: CMakeLists.txt  KINECT_SETUP.md  MEMORY_LEAK_IMPLEMENTATION.md  MEMORY_MANAGEMENT.md  SCRIPTS_OVERVIEW.md  build.sh  memory_check.sh  memory_profile.sh  sensor_setup.sh  test.sh  test_detail.json  valgrind.supp  vcpkg.json
backend/config/calibration/: README.md  kinect-v1_calibration.json
backend/docs/: SHM_TRANSPORT_SPEC.md
backend/src/: AppManager.cpp  AppManager.h  main.cpp
backend/src/common/: Checksum.cpp  Checksum.h  DataTypes.h  LOGGER_DESIGN.md  Logger.cpp  Logger.h  LoggingNames.h  SensorResolutions.h  StatsUtil.h
backend/src/hal/: HAL_Manager.cpp  HAL_Manager.h  ISensorDevice.h  KinectV1_Device.cpp  KinectV1_Device.h  KinectV2_Device.cpp  KinectV2_Device.h  MockSensorDevice.cpp  MockSensorDevice.h  SensorRecorder.cpp  SensorRecorder.h  SyntheticSensorDevice.cpp  SyntheticSensorDevice.h
backend/src/processing/: CoordinateTransform.cpp  CoordinateTransform.h  DepthCorrector.cpp  DepthCorrector.h  FastGaussianBlur.cpp  FastGaussianBlur.h  FusionAccumulator.h  GAME_FEATURES_REQUIREMENTS.md  IHeightMapFilter.h  IMPLEMENTATION_ROADMAP.md  LEGACY_ANALYSIS.md  PROCESSING_DESIGN.md  PROCESSING_IMPLEMENTATION_PLAN.md  PROCESSING_PIPELINE_OVERVIEW.md  PipelineParser.cpp  PipelineParser.h  ProcessingManager.cpp  ProcessingManager.h  ProcessingStages.h  ProcessingTypes.h  SpatialFilter.h  TemporalFilter.cpp  TemporalFilter.h
backend/src/processing/stages/: BuildStage.h  FusionStage.h  LambdaStage.h  SpatialStage.h  TemporalStage.h
backend/src/tools/: KinectDataViewer.cpp  KinectDataViewer.h  SENSOR_VIEWER.md  SensorEnumerator.cpp  SensorEnumerator.h  SensorViewerCore.cpp  SensorViewerCore.h  SimpleViewer.cpp  VideoWindow.cpp  VideoWindow.h  kinect_viewer_main.cpp  kinectv1_ctl.cpp  sensor_viewer_main.cpp
backend/src/tools/analyzer/: data_analyzer_main.cpp
backend/src/tools/calibration/: CALIBRATION.md  (+4 more)
backend/src/transport/: FifoManager.cpp  FifoManager.h  HandshakeServer.cpp  HandshakeServer.h  ITransportServer.h  IWorldFrameClient.h  LocalTransportServer.cpp  LocalTransportServer.h  SHM_TRANSPORT_SPEC.md  SOCKET_TRANSPORT_SPEC.md  SharedMemoryLayout.h  SharedMemoryReader.cpp  SharedMemoryReader.h  SharedMemoryTransportServer.cpp  SharedMemoryTransportServer.h  SharedMemoryWorldFrameClient.cpp  SharedMemoryWorldFrameClient.h  SocketTransportServer.cpp  SocketTransportServer.h  SocketWorldFrameClient.cpp  SocketWorldFrameClient.h  WORLD_FRAME_FORMAT.md
backend/tests/: CMakeLists.txt  INTEGRATION_TESTING_PLAN.md  IntegrationHarness.h  MEMORY_TESTING_IMPLEMENTATION_SUMMARY.md  MEMORY_TESTING_PLAN.md  PHASE2_MEMORY_TESTING_SUMMARY.md  TestLocalTransportClient.cpp  test_frame_id_monotonic.cpp  test_integration_phase0_basic.cpp  test_kinect_data_validation.cpp  test_kinect_data_viewer.cpp  test_logger_basic.cpp  test_logger_concurrency.cpp  test_logger_levels.cpp  test_pipeline_basic.cpp  test_pipeline_robust.cpp  test_processing_stress.cpp  test_sensor_recording.cpp  test_shm_benchmark.cpp  test_shm_integrity.cpp  test_shm_reader.cpp  test_shm_verified_matrix.cpp  test_transport_handshake.cpp
backend/tests/helpers/: DeterministicEnvGuard.h  MemoryUtils.h  TestCalderaClient.cpp  TestCalderaClient.h  TestFramePattern.h  TestLocalTransportClient.cpp  TestLocalTransportClient.h
backend/tests/integration/: test_fault_injection_jitter_drop.cpp  test_fault_injection_sensor_pause.cpp  test_pipeline_metrics.cpp  test_pipeline_throughput.cpp  test_process_shm_blackbox.cpp  test_processing_scale_semantics.cpp  test_real_sensor_e2e.cpp  test_synthetic_sensor_pass_through.cpp  test_transport_latency.cpp  test_transport_midstream_attach.cpp  test_transport_socket_parity.cpp  test_worldframe_client_shm.cpp
backend/tests/logger/: test_logger_ratelimit.cpp
backend/tests/memory/: test_hal_memory.cpp  test_memory_extended_runtime.cpp  test_memory_full_pipeline_integration.cpp  test_memory_hal_processing_integration.cpp  test_memory_leaks.cpp  test_memory_pressure.cpp  test_memory_processing_transport_integration.cpp  test_memory_stress.cpp  test_processing_memory.cpp
backend/tests/performance/: test_performance_shm_throughput_verified.cpp  test_performance_spatial_kernels.cpp
backend/tests/pipeline/: test_pipeline_basic.cpp  test_pipeline_failures.cpp  test_pipeline_frame_id_monotonic.cpp  test_pipeline_parser.cpp  test_stage_pipeline_basic.cpp
backend/tests/processing/: test_CoordinateTransform.cpp  test_DepthCorrector.cpp  test_FastGaussianBlur.cpp  test_TemporalFilter.cpp  test_fusion_all_invalid.cpp  test_fusion_concat.cpp  test_fusion_confidence_clamp.cpp  test_fusion_dropout.cpp  test_fusion_metrics.cpp  test_fusion_min_z.cpp  test_fusion_passthrough.cpp  test_fusion_weighted.cpp  test_fusion_zero_confidence.cpp  test_pipeline_parser.cpp  test_processing_adaptive_spatial.cpp  test_processing_adaptive_spatial_phase2.cpp  test_processing_adaptive_strong_kernel.cpp  test_processing_adaptive_temporal_scale.cpp  test_processing_confidence_export.cpp  test_processing_confidence_map.cpp  test_processing_conversion.cpp  test_processing_env_calibration_fallback.cpp  test_processing_invalid_pixels.cpp  test_processing_pipeline_execution.cpp  test_processing_pipeline_gating.cpp  test_processing_plane_validation.cpp  test_processing_profile_loading.cpp  test_processing_shm_negatives.cpp  test_processing_spatial_edge_metric.cpp  test_processing_spatial_filter_impulse.cpp  test_processing_spatial_kernel_wide5.cpp  test_processing_spatial_sampling_metric.cpp  test_processing_stability_metrics.cpp
backend/tests/sensor/: test_sensor_kinectv1_device.cpp  test_sensor_kinectv2_device.cpp  test_sensor_mock_negative.cpp  test_sensor_recording.cpp
backend/tests/shm/: test_shm_extended.cpp  test_shm_latency.cpp  test_shm_overflow.cpp  test_shm_realistic_fps.cpp  test_shm_stats.cpp
backend/tests/transport/: test_transport_handshake_stats.cpp  test_transport_health.cpp
(+10 files in other folders)
